# codal-microbit-v2_nrf52833dk

./: CMakeLists.txt
model/: MicroBit.cpp  MicroBit.h  MicroBitIO.cpp  MicroBitIO.h
